Fixing some styling issues with overflow on the logs for the embedded editor

--- a/AzureFunctions.AngularClient/src/app/controls/bottom-tabs/bottom-tabs.component.scss
+++ b/AzureFunctions.AngularClient/src/app/controls/bottom-tabs/bottom-tabs.component.scss
@@ -1,6 +1,6 @@
 @import '../../../sass/common/variables';
 
-nav{
+#bottom-tabs-wrapper{
     position: relative;
 }
 
@@ -41,4 +41,7 @@ nav{
 #bottom-tabs-content{
     height: 262px;
     padding: 0px 10px 10px 10px;
+    position: absolute;
+    left: 0px;
+    right: 0px;
 }
